// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test react hook \`useWhyDidYouUpdate\` works with complex props 1`] = `
Object {
  "console": "log",
  "messages": Array [
    "[why-did-you-update] 'TestComponent' first render.",
  ],
}
`;

exports[`Test react hook \`useWhyDidYouUpdate\` works with complex props 2`] = `
Object {
  "console": "log",
  "messages": Array [
    "[why-did-you-update] 'TestComponent'",
    Object {
      "style": Object {
        "from": undefined,
        "to": Object {
          "fontSize": "28px",
        },
      },
    },
  ],
}
`;

exports[`Test react hook \`useWhyDidYouUpdate\` works with complex props 3`] = `
Object {
  "console": "log",
  "messages": Array [
    "[why-did-you-update] 'TestComponent'",
    Object {
      "style": Object {
        "from": Object {
          "fontSize": "28px",
        },
        "to": Object {
          "fontSize": "28px",
          "margin": "8px 0px",
        },
      },
      "title": Object {
        "from": "title",
        "to": "new-title",
      },
    },
  ],
}
`;

exports[`Test react hook \`useWhyDidYouUpdate\` works with complex props 4`] = `
Object {
  "console": "log",
  "messages": Array [
    "[why-did-you-update] 'TestComponent'",
    Object {
      "color": Object {
        "from": "red",
        "to": "green",
      },
      "style": Object {
        "from": Object {
          "fontSize": "28px",
          "margin": "8px 0px",
        },
        "to": Object {
          "fontSize": "28px",
          "margin": "8px 0px",
        },
      },
    },
  ],
}
`;

exports[`Test react hook \`useWhyDidYouUpdate\` works with simple props 1`] = `
Object {
  "console": "log",
  "messages": Array [
    "[why-did-you-update] 'TestComponent' first render.",
  ],
}
`;

exports[`Test react hook \`useWhyDidYouUpdate\` works with simple props 2`] = `
Object {
  "console": "log",
  "messages": Array [
    "[why-did-you-update] 'TestComponent'",
    Object {
      "fontSize": Object {
        "from": "20px",
        "to": 20,
      },
    },
  ],
}
`;

exports[`Test react hook \`useWhyDidYouUpdate\` works with simple props 3`] = `
Object {
  "console": "log",
  "messages": Array [
    "[why-did-you-update] 'TestComponent'",
    Object {
      "title": Object {
        "from": "title",
        "to": "new-title",
      },
    },
  ],
}
`;

exports[`Test react hook \`useWhyDidYouUpdate\` works with simple props 4`] = `
Object {
  "console": "log",
  "messages": Array [
    "[why-did-you-update] 'TestComponent'",
    Object {
      "fontSize": Object {
        "from": 20,
        "to": "28px",
      },
    },
  ],
}
`;
